--- a/home/templates/home/product_detail.html
+++ b/home/templates/home/product_detail.html
@@ -255,5 +255,7 @@
     
       </footer>
       <!--/.Footer-->
-    
+      <script>
+          new WOW().init();
+      </script>
 {% endblock %}
