--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -266,9 +266,10 @@
       <section class="text-center mb-4">
 
         <!--Grid row-->
-        <div class="row wow fadeIn">
+        <div class="row">
 
           <!--Grid column-->
+
           <div class="col-lg-3 col-md-6 mb-4">
 
             <!--Card-->
@@ -310,7 +311,7 @@
 
           </div>
           <!--Grid column-->
-
+          
           <!--Grid column-->
           <div class="col-lg-3 col-md-6 mb-4">
 
