--- a/home/templates/home/cart.html
+++ b/home/templates/home/cart.html
@@ -1,6 +1,11 @@
 {% extends 'home/base.html' %}
 
 {% block head %}
+<style>
+    body { 
+    padding-top: 80px; 
+    }
+</style>
 {% endblock %}
 
 {% block body %}
@@ -47,25 +52,25 @@
 
         <!-- Right -->
         <ul class="navbar-nav nav-flex-icons">
-
+        
           <li class="nav-item">
-           {% if not request.user.is_authenticated %}
-           <a type="button" class="btn btn-gplus" href="{% url 'social:begin' 'google-oauth2' %}"><i class="fab fa-google-plus-g pr-1"></i> SignIn with Google </a>
-          {% else %}
-          <a type="button" class="btn btn-danger" href="{% url 'logout' %}"> Logout </a>
-           {% endif %} 
-
-          </li>
-          {% if  request.user.is_authenticated %}
-          <li class="nav-item">
-            <a class="nav-link waves-effect" href="{% url 'cart' %}">
-              <span class="badge red z-depth-1 mr-1"> {{ user.buyer.cart_set.first.qty.count }} </span>
-              <i class="fas fa-shopping-cart"></i>
-              <span class="clearfix d-none d-sm-inline-block"> Cart </span>
-            </a>
-          </li>
-          {% endif %}
-      
+              {% if not request.user.is_authenticated %}
+              <a type="button" class="btn btn-gplus" href="{% url 'social:begin' 'google-oauth2' %}"><i class="fab fa-google-plus-g pr-1"></i> SignIn with Google </a>
+             {% else %}
+             <a type="button" class="btn btn-danger" href="{% url 'logout' %}"> Logout </a>
+              {% endif %} 
+   
+             </li>
+             {% if  request.user.is_authenticated %}
+             <li class="nav-item">
+               <a class="nav-link waves-effect" href="{% url 'cart' %}">
+                 <span class="badge red z-depth-1 mr-1"> {{ user.buyer.cart_set.first.qty.count }} </span>
+                 <i class="fas fa-shopping-cart"></i>
+                 <span class="clearfix d-none d-sm-inline-block"> Cart </span>
+               </a>
+             </li>
+             {% endif %}
+         
         </ul>
 
       </div>
@@ -74,20 +79,11 @@
   </nav>
   <!-- Navbar -->
 
-  <main>
-    <img src="https://www.dillards.com/images/espots/071919_splash_tile_top_trends_01.jpg">
-    
+  <main>   
+      <button type="button" class="btn btn-secondary ml-5 mt-2">Proceed To Checkout: {{ user.buyer.cart_set.first.qty.count }}</button> 
     <div class="container mt-4">
 
-      <!--Navbar-->
-    
-        <!-- Collapsible content -->
-
-   
-      <!--/.Navbar-->
-
-      <!--Section: Products v.3-->
-      <section class="text-center mb-4">
+      <section class="text-center mb-2">
 
         <!--Grid row-->
         <div class="row">
@@ -101,7 +97,7 @@
             
               <!--Card image-->
               <div class="view overlay">
-                <img src="{{ product.img.url }}" class="card-img-top"
+                <img src="{{ product.product.img.url }}" class="card-img-top"
                   alt="">
                 <a>
                   <div class="mask rgba-white-slight"></div>
@@ -117,10 +113,10 @@
                 </a>
                 <h5>
                   <strong>
-                    <a href="{% url 'product_view' product.pk %}" class="dark-grey-text">{{ product.name }}
+                    <a href="{% url 'product_view' product.product.pk %}" class="dark-grey-text">{{ product.product.name }}
                       <span class="badge badge-pill danger-color">NEW</span>
                     </a>
-                    {% if product.stock %}
+                    {% if product.product.stock %}
                     <span class="badge badge-pill primary-color">InStock</span>
                     {% else %}
                     <span class="badge badge-pill danger-color">NoStock</span>
@@ -129,9 +125,11 @@
                 </h5>
 
                 <h4 class="font-weight-bold blue-text">
-                  <strong>₹{{ product.price }}</strong>
+                  <strong>₹{{ product.product.price }}</strong> <br> <br>
+                  <strong style="color:black;"> Quantity :</strong> {{product.qty}}
                 </h4>
-
+                <button class="btn purple-gradient">Checkout</button>
+                <a href="{% url 'cart_remove' product.product.pk %}"><button type="button" class="btn btn-danger">Remove</button></a>
               </div>
               <!--Card content-->
 
@@ -150,43 +148,7 @@
       <!--Section: Products v.3-->
 
       <!--Pagination-->
-      <nav class="d-flex justify-content-center wow fadeIn">
-        <ul class="pagination pg-blue">
 
-          <!--Arrow left-->
-          <li class="page-item disabled">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-              <span class="sr-only">Previous</span>
-            </a>
-          </li>
-
-          <li class="page-item active">
-            <a class="page-link" href="#">1
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">2</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">3</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">4</a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="#">5</a>
-          </li>
-
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-              <span class="sr-only">Next</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
       <!--Pagination-->
 
     </div>
