--- a/home/templates/home/product_detail.html
+++ b/home/templates/home/product_detail.html
@@ -1,6 +1,37 @@
 {% extends 'home/base.html' %}
 
 {% block head %}
+<style>
+.ibtn{
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+.ibtn:focus{
+    outline: 0;
+}
+.ibtn:focus{
+    outline: none;
+}
+</style>
+
+<script>
+function rate(str){
+  for(var i=1;i<=5;i++){
+    let star = document.getElementById(`str-${i}`)
+    star.children[0].style.color = 'grey';
+  }
+  var limit = str.split('-')[1]
+  for(var i=1;i<=limit;i++){
+    let star = document.getElementById(`str-${i}`)
+    star.children[0].style.color = 'gold';
+  } 
+}
+</script>
 {% endblock %}
 
 {% block body %}
@@ -9,8 +40,8 @@
         <div class="container">
     
           <!-- Brand -->
-          <a class="navbar-brand waves-effect" href="https://mdbootstrap.com/docs/jquery/" target="_blank">
-            <strong class="brown-text">Women's Paradise</strong>
+          <a class="navbar-brand waves-effect" href="{% url 'home' %}">
+            <strong class="blue-text">Women's Paradise</strong>
           </a>
     
           <!-- Collapse -->
@@ -31,10 +62,9 @@
         aria-haspopup="true" aria-expanded="false">Categories</button>
     
       <div class="dropdown-menu dropdown-primary">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <a class="dropdown-item" href="#">Something else here</a>
-        <a class="dropdown-item" href="#">Something else here</a>
+        {% for category in categories %}
+        <a class="dropdown-item" href="#">{{category}}</a>
+        {% endfor %}
       </div>
     </div> 
     </li>
@@ -48,28 +78,26 @@
             <!-- Right -->
             <ul class="navbar-nav nav-flex-icons">
               <li class="nav-item">
-                <a class="nav-link waves-effect">
-                  <span class="badge red z-depth-1 mr-1"> 1 </span>
-                  <i class="fas fa-shopping-cart"></i>
-                  <span class="clearfix d-none d-sm-inline-block"> Cart </span>
-                </a>
-              </li>
+         
               <li class="nav-item">
-                <a href="https://www.facebook.com/mdbootstrap" class="nav-link waves-effect" target="_blank">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="https://twitter.com/MDBootstrap" class="nav-link waves-effect" target="_blank">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="https://github.com/mdbootstrap/bootstrap-material-design" class="nav-link border border-light rounded waves-effect"
-                  target="_blank">
-                  <i class="fab fa-github mr-2"></i>MDB GitHub
-                </a>
-              </li>
+                  {% if not request.user.is_authenticated %}
+                  <a type="button" class="btn btn-gplus" href="{% url 'social:begin' 'google-oauth2' %}"><i class="fab fa-google-plus-g pr-1"></i> SignIn with Google </a>
+                 {% else %}
+                 <a type="button" class="btn btn-danger" href="{% url 'logout' %}"> Logout </a>
+                  {% endif %} 
+       
+                 </li>
+                 {% if  request.user.is_authenticated %}
+                 <li class="nav-item">
+                   <a class="nav-link waves-effect" href="{% url 'cart' %}">
+                     <span class="badge red z-depth-1 mr-1"> {{ user.buyer.cart_set.first.qty.count }} </span>
+                     <i class="fas fa-shopping-cart"></i>
+                     <span class="clearfix d-none d-sm-inline-block"> Cart </span>
+                   </a>
+                 </li>
+                 {% endif %}
+         
+            
             </ul>
     
           </div>
@@ -87,7 +115,7 @@
             <!--Grid column-->
             <div class="col-md-6 mb-4">
     
-              <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/14.jpg" class="img-fluid" alt="">
+              <img src="{{ product.img.url }}" class="img-fluid" alt="">
     
             </div>
             <!--Grid column-->
@@ -98,37 +126,65 @@
               <!--Content-->
               <div class="p-4">
     
-                <div class="mb-3">
-                  <a href="">
-                    <span class="badge purple mr-1">Category 2</span>
-                  </a>
-                  <a href="">
-                    <span class="badge blue mr-1">New</span>
-                  </a>
-                  <a href="">
-                    <span class="badge red mr-1">Bestseller</span>
-                  </a>
+                <h1>
+                  {{ product.name }}
+                </h1>
+              
+                <b>Rating:</b>
+                {% if not request.user.seller %}
+                <div class="mt-2"> 
+                <button type="button" class="ibtn" id="str-1" onclick="rate('str-1')">
+                  <i class="material-icons" style="font-size:28px;color:gold">star</i>
+                </button> 
+                <button type="button" class="ibtn" id="str-2" onclick="rate('str-2')">
+                  <i class="material-icons" style="font-size:28px;color:gold">star</i>
+                </button> 
+                <button type="button" class="ibtn" id="str-3" onclick="rate('str-3')">
+                  <i class="material-icons" style="font-size:28px;color:gold;">star</i>
+                </button> 
+                <button type="button" class="ibtn" id="str-4" onclick="rate('str-4')">
+                  <i class="material-icons" style="font-size:28px;color:gold;">star</i>
+                </button> 
+                <button type="button" class="ibtn" id="str-5" onclick="rate('str-5')">
+                  <i class="material-icons" style="font-size:28px;color:gold;">star</i>
+                </button> 
                 </div>
-    
+                {% endif %}
+                <div class="mb-3">
+                  {% for category in product.category_set.all %}
+                  <a href="">
+                    <span class="badge purple mr-1">{{ category.category }}</span>
+                  </a>
+                  {% endfor %}
+                </div>
+  
                 <p class="lead">
-                  <span>$100</span>
+                  <span>₹{{ product.price }}</span>
                 </p>
     
                 <p class="lead font-weight-bold">Description</p>
     
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dolor suscipit libero eos atque quia ipsa
-                  sint voluptatibus!
-                  Beatae sit assumenda asperiores iure at maxime atque repellendus maiores quia sapiente.</p>
+                <p>{{ product.description }}</p>
     
-                <form class="d-flex justify-content-left">
+                <h4>
+                  <strong>Sold By:</strong>{{ product.seller_set.first.user.username }}<br>
+                  <strong>Contact Us:</strong>{{ product.seller_set.first.address }}
+                </h4>
+
+                <div class="mt-4"></div>
+                {% if not in_cart %}
+                <form class="d-flex justify-content-left" method="POST" action="{% url 'cart' %}">
+                  {% csrf_token %}
                   <!-- Default input -->
-                  <input type="number" value="1" aria-label="Search" class="form-control" style="width: 100px">
+                  <input type="number" value="1" aria-label="Search" class="form-control" style="width: 100px" name="qty">
                   <button class="btn btn-primary btn-md my-0 p" type="submit">Add to cart
                     <i class="fas fa-shopping-cart ml-1"></i>
                   </button>
-    
+                  <input type="number" value="{{ product.pk }}" name="pk" style="visibility: hidden">
                 </form>
-    
+                {% else %}
+                <button type="button" class="btn btn-danger btn-lg" disabled>In Cart</button>
+                {% endif %}
               </div>
               <!--Content-->
     
@@ -194,19 +250,6 @@
     
       <!--Footer-->
       <footer class="page-footer text-center font-small mt-4 wow fadeIn">
-    
-        <!--Call to action-->
-        <div class="pt-4">
-          <a class="btn btn-outline-white" href="https://mdbootstrap.com/docs/jquery/getting-started/download/" target="_blank"
-            role="button">Download MDB
-            <i class="fas fa-download ml-2"></i>
-          </a>
-          <a class="btn btn-outline-white" href="https://mdbootstrap.com/education/bootstrap/" target="_blank" role="button">Start
-            free tutorial
-            <i class="fas fa-graduation-cap ml-2"></i>
-          </a>
-        </div>
-        <!--/.Call to action-->
     
         <hr class="my-4">
     
